# py-spanorm

./: .gitignore  AUDIT.md  DISCOVERY.md  ITERATION_LOG.md  MATH.md  README.md  RECONSTRUCTION_REPORT.md  pyproject.toml
SpaNorm-ref/.devcontainer/: Dockerfile
data/: large_W.csv  large_bs_xy_bio.csv  large_bs_xy_ls.csv  large_coords.csv  large_counts.csv  large_idx.csv  large_r_alpha.csv  large_r_gmean.csv  large_r_logcounts.csv  large_r_psi.csv  manifest.yaml  r_W.csv  r_alpha.csv  r_bs_xy_bio.csv  r_bs_xy_ls.csv  r_gmean.csv  r_logcounts.csv  r_params.rds  r_psi.csv  r_sample_idx.csv  real_coords.csv  real_counts.csv  real_r_W.csv  real_r_alpha.csv  real_r_gmean.csv  real_r_logcounts.csv  real_r_psi.csv  shared_coords.csv  shared_counts.csv  shared_params.csv  visium100_r_W.csv  visium100_r_alpha.csv  visium100_r_gmean.csv  visium100_r_psi.csv
examples/: compare_R_vs_Python.py  function_by_function.py  generate_fixture.R  tutorial_spatial.py
py_spanorm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
spanorm/: __init__.py  core.py  dispersion.py  fast_irls.py  fit.py  gpu_helpers.py  nb_model.py  normalization.py  pca.py  plotting.py  preprocessing.py  spline.py  svg.py
tests/: benchmark_optimized.py  compare_final.py  compare_r_py.py  full_visium_comparison.py  r_core_reference.R  r_fast_reference.R  r_generate_data.R  r_large_reference.R  r_reference_driver.R  real_visium_test.py  run_real_data.R  run_visium_r.R  test_exact_match.py  test_integration.py  test_smoke.py  visium_r_params.R
