[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "py-spanorm"
version = "0.1.0"
description = "Spatially-aware normalisation for spatial transcriptomics data (Python port of SpaNorm)"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.9"
authors = [
    {name = "RebuildR Agent"},
]
dependencies = [
    "numpy>=1.22",
    "scipy>=1.9",
    "pandas>=1.5",
    "anndata>=0.8",
    "scikit-learn>=1.1",
    "statsmodels>=0.13",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
]

[tool.setuptools.packages.find]
include = ["spanorm*"]
